# api/models/payment.js
@@ -3,7 +3,8 @@ module.exports = (sequelize, DataTypes) => {
   const payment = sequelize.define('payment', {
     description: DataTypes.STRING,
     amount: DataTypes.NUMBER,
-    accepted: DataTypes.BOOLEAN
+    accepted: DataTypes.BOOLEAN,
+    referenceNumber: DataTypes.STRING
   }, {});
   payment.associate = function(models) {
     models.payment.belongsTo(models.card);
